plugins {
    id 'java'
    id 'jacoco'
    id 'org.springframework.boot' version '2.6.1'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
    id "org.sonarqube" version "3.3"
    id 'info.solidsoft.pitest' version '1.7.0'
}



def versions = [
        mapstructVersion: '1.3.1.Final',
        sentryVersion   : '5.0.1',
        springdocVersion: '1.4.2',
        postgresqlVersion : '42.3.1',
        gsonVersion     : '2.8.6',
        commonsLang3Version  : '3.10',
        lombokVersion   : '1.18.6',
        sonarVersion    : '2.7',
        h2DBVersion     : '1.4.200',
        mockitoVersion  : '3.3.3',
        junitVersion    : '4.13',
        harmcrestVersion: '1.3',
        testngVersion   : '6.10',
        festVersion     : '1.4',
        gradlePitest    : '1.4.6',
        pitest          : '1.4.10',
        sonarPitest     : '0.5',
        liquibase       : '4.6.1',
        commonsCollections4Version: '4.4'
]

dependencyManagement {
    imports {
        mavenBom "org.springframework.boot:spring-boot-dependencies:2.5.6"
        mavenBom "org.springframework:spring-framework-bom:5.3.13"
        mavenBom "com.amazonaws:aws-java-sdk-bom:1.12.115"
        mavenBom "org.springframework.security:spring-security-bom:5.6.0"
    }
    dependencies {
        dependencySet(group: 'io.sentry', version: versions.sentryVersion) {
            entry 'sentry-spring-boot-starter'
            entry 'sentry-logback'
        }
        dependencySet(group: 'org.mapstruct', version: versions.mapstructVersion) {
            entry 'mapstruct'
            entry 'mapstruct-processor'
        }
    }
}
group = 'uk.gov.justice.laa.crime'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}


repositories {
    mavenLocal()
    mavenCentral()
}


dependencies {

    // Spring
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-webflux'
    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor'
    implementation group: 'org.springframework.boot', name: 'spring-boot-autoconfigure'
    implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client'
    implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: versions.springdocVersion

    implementation group: 'io.projectreactor.netty', name: 'reactor-netty'


    // AWS
    implementation group: 'org.mapstruct', name: 'mapstruct'
    annotationProcessor group: 'org.mapstruct', name: 'mapstruct-processor'

    implementation group: 'io.sentry', name: 'sentry-spring-boot-starter'
    implementation group: 'io.sentry', name: 'sentry-logback'

    // DB Dependencies
    implementation group: 'org.postgresql', name: 'postgresql', version: versions.postgresqlVersion
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'

    // Utility Libraries
    implementation group: 'org.apache.commons', name: 'commons-collections4', version: versions.commonsCollections4Version


    //liquibase - DB versioning and change tracking
    implementation group: 'org.liquibase', name: 'liquibase-core', version: versions.liquibase

    implementation group: 'com.google.code.gson', name: 'gson', version: versions.gsonVersion
    implementation group: 'org.apache.commons', name: 'commons-lang3', version: versions.commonsLang3Version

    compileOnly group: 'org.projectlombok', name: 'lombok', version: versions.lombokVersion
    annotationProcessor group: 'org.projectlombok', name: 'lombok', version: versions.lombokVersion


    implementation group: 'org.sonarsource.scanner.gradle', name: 'sonarqube-gradle-plugin', version: versions.sonarVersion

    implementation group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
    implementation group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.sonarPitest
    implementation group: 'org.pitest', name: 'pitest', version: versions.pitest

    // Test Only
    testImplementation(group: 'org.springframework.boot', name: 'spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
    testImplementation group: 'com.h2database', name: 'h2', version: versions.h2DBVersion
    testImplementation group: 'org.mockito', name: 'mockito-inline', version: versions.mockitoVersion
    testImplementation group: 'junit', name: 'junit', version: versions.junitVersion
    testImplementation group: 'org.hamcrest', name: 'hamcrest-all', version: versions.harmcrestVersion
    testImplementation group: 'org.testng', name: 'testng', version: versions.testngVersion
    testImplementation group: 'org.easytesting', name: 'fest-assert', version: versions.festVersion

}

jar {
    enabled = false
}


test {
    dependsOn 'cleanTest'
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    reports {
        xml.enabled true
        html.enabled true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it,
                    exclude: [
                              '**/entity/**',
                              '**/dto/**',
                              '**/config/**'
                              ])
        }))
    }

}

pitest {
    targetClasses = ['uk.gov.justice.laa.crime.meansassessment.*']
    excludedClasses = ['uk.gov.justice.laa.crime.meansassessment.dto.*','uk.gov.justice.laa.crime.meansassessment.mapper.*', 'uk.gov.justice.laa.crime.meansassessment.CrimeMeansAssessmentApplication']
    threads = 5
    outputFormats = ['XML', 'HTML']
    timestampedReports = false
    mutationThreshold = 60
}

tasks['sonarqube'].dependsOn test

sonarqube {
    properties {
        property "sonar.exclusions", "**/entity/**.java , **/model/**.java , **/dto/**.java , **/config/**.java, **/jms/**.java,**/exception/**.java, **/**StoredProcedureRepository.java"
        property "sonar.coverage.exclusions", "**/CrimeMeansAssessmentApplication.java"
        property "sonar.jacoco.reportPath", "${project.buildDir}/jacoco/test.exec"
        property "sonar.projectKey", "crime-means-assessment"
        property "sonar.projectName", "Crime Apps :: crime-means-assessment"
        property "sonar.pitest.mode", "reuseReport"
        property "sonar.pitest.reportsDirectory", "build/reports/pitest"

    }
}

